[package]
name = "profiler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
itertools = "0.11.0"
nix = { version = "0.27.1", features = ["fs"] }
palette = "0.7.3"
plotters = "0.3.5"
serde_json = "1.0.107"
smol = "1.3.0"
tempfile = "3.8.0"
